improved static file config for nginx

--- a/templates/default/nginx/include-static.conf.erb
+++ b/templates/default/nginx/include-static.conf.erb
@@ -3,7 +3,7 @@
 # - flash
 # - fonts
 # - css/js
-location ~* \.(?:jpg|jpeg|gif|png|ico|swf|svg|eot|ttf|otf|woff|css|js)$ {
+location ~* \.(?:jpe?g|gif|png|ico|swf|svg|eot|ttf|otf|woff|htc|css|js)$ {
   access_log off;
   expires max;
 }
