--- a/templates/default/index.php.erb
+++ b/templates/default/index.php.erb
@@ -1,6 +1,7 @@
 <h1>Welcome on <%= node['hostname'] %></h1>
 <ul>
   <li><a href="/phpMyAdmin">phpMyAdmin</a></li>
+	<li><a href="/opcachegui/public">OPCacheGUI</a></li>
 </ul>
 <hr />
 
