--- a/templates/default/php/zz-opcache-overrides.ini.erb
+++ b/templates/default/php/zz-opcache-overrides.ini.erb
@@ -1,3 +1,4 @@
 opcache.enable = 1
 opcache.max_accelerated_files = 32000
-opcache.memory_consumption = 256
+opcache.memory_consumption = 128
+opcache.fast_shutdown = 0
