--- a/templates/default/mysql/tuning.cnf.erb
+++ b/templates/default/mysql/tuning.cnf.erb
@@ -6,7 +6,7 @@
 character-set-server = 'utf8'
 collation-server     = 'utf8_unicode_ci'
 skip-character-set-client-handshake
-init_connect='SET collation_connection = utf8_unicode_ci'..
+init_connect='SET collation_connection = utf8_unicode_ci'
 init_connect='SET NAMES utf8'
 
 log_error = '<%= node[:mysql][:log_dir] %>/error.log'
